# pancard

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pyvenv.cfg  setup.py
pancard/: __init__.py  cli.py  decoder.py  exceptions.py  validator.py
pancard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pancard.py
